--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div class="container register-custom" >
-    <h1>Modification du mot de passe</h1>
-    <a href="{{ path('app_account') }}">Retourner à mon Compte</a><br/>
-    <hr>
+    <h1 >Modification du mot de passe</h1>
+    <a class="custom-submit btn" href="{{ path('app_account') }}"><h5 class="mb-0">Retourner à mon compte</h5></a><br/>
+    <hr class="mt-1">
     {% if notification %}
         <div class="alert alert-info">{{ notification }}</div>
     {% endif %}
