--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-md-5  text-center" style="padding-top: 125px">
+        <div class="col-md-5  text-center mt-4" >
             <img class="img_films img-fluid" src="/uploads/{{ movie.illustration }}" alt="{{ movie.name }}">
             <div class="d-grid gap-2 col-6 mx-auto">
                 <a class="btn mt-4 custom-submit" href="/commentaire/{{ movie.slug }}" role="button">Ajouter un Commentaire</a>
@@ -69,20 +69,25 @@
 
                 {% endif %}
 
-
-
-
-
-
-
             </div>
             <p>{{ movie.description }}</p>
+
+
+
+
+
 
 
             <video title="{{ movie.name }}" preload="auto" autoplay controls width="100%"
                    poster="/uploads/{{ movie.illustrationHeaders }}">
                 <source src="/uploads/{{ movie.movieLink }}" type="video/mp4">
                 <p>{{ movie.name }}</p>
+
+                <track default
+                       kind="captions"
+                       srclang="fr"
+                       src="/uploads/Blade_Runner.vtt">
+
             </video>
         </div>
     </div>
