--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,7 +36,7 @@
         Se connecter
     </button>
         <p class="text-center mt-3"><a href="{{ path('app_reset_password') }}" class="color-custom"> Mot de passe oublié?</a></p>
-        <p class="text-center mt-3">Vous ne possédez pas de compte ?  <a href="{{ path('app_register') }}" class="color-custom"> Connectez-Vous</a></p>
+        <p class="text-center mt-3">Vous ne possédez pas de compte ?  <a href="{{ path('app_register') }}" class="color-custom"> Inscrivez-Vous</a></p>
 
     </div>
         </div>
