--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,9 +5,9 @@
 {% block content %}
     <h1>Mon Compte</h1>
     Bienvenue {{ app.user.firstname }} dans votre compte. <br/>
-    C'est dans cet espace que vous pourrez consulter vos films
+
     <hr>
-    <a href="{{ path('app_account_password') }}">Modifier mot de passe</a><br/>
+    <a class="custom-submit btn" style="width: 200px" href="{{ path('app_account_password') }}">Modifier mot de passe</a><br/>
     <hr>
 
     {% if likes %}
