--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -21,7 +21,7 @@
                 <a href="{{ path('app_film',{'slug' : like.movie.slug}) }}">
                     <div class="container movie_item container-custom text-center">
 
-                        <img src="/uploads/{{ like.movie.illustration }}" alt="{{ like.movie.name }}" class="img-fluid "
+                        <img src="/uploads/illustrations/{{ like.movie.illustration }}" alt="{{ like.movie.name }}" class="img-fluid "
                              style="max-height: 300px; width: auto">
                         <div class="middle center">
                             <h5>{{ like.movie.name }}</h5>
