--- a/templates/movie_list_controlleur/show.html.twig
+++ b/templates/movie_list_controlleur/show.html.twig
@@ -78,8 +78,8 @@
 
 
 
-            <video title="{{ movie.name }}" preload="auto" autoplay controls width="100%"
-                   poster="/uploads/illustrations/{{ movie.illustrationHeaders }}">
+            <video title="{{ movie.name }}" preload="auto" autoplay controls width="90%"
+                   poster="/uploads/banners/{{ movie.illustrationHeaders }}">
                 <source src="/uploads/movies/{{ movie.movieLink }}" type="video/mp4">
                 <p>{{ movie.name }}</p>
 
